cambiando el nombre del proyecto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-rest-con-nextjs-y-mysql",
+  "name": "api-rest-con-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
